plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'org.mikeneck.graalvm-native-image' version '1.4.1'
}

group 'tf.bug'
version '0.1.0'

compileJava {
    sourceCompatibility = 16
}

tasks.withType(JavaCompile).all {
    options.compilerArgs += '--enable-preview'
}

tasks.withType(Test).all {
    jvmArgs += '--enable-preview'
}

tasks.withType(JavaExec).all {
    jvmArgs += '--enable-preview'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.discord4j:discord4j-core:3.2.6'

    implementation 'org.slf4j:slf4j-simple:2.0.11'

    implementation 'io.r2dbc:r2dbc-spi:1.0.0.RELEASE'
    implementation 'io.r2dbc:r2dbc-postgresql:0.8.13.RELEASE'

    implementation 'net.time4j:time4j-base:5.9.3'
    implementation 'net.time4j:time4j-sqlxml:5.9.3'
    implementation 'net.time4j:time4j-tzdata:5.0-2023d'

    implementation 'net.iakovlev:timeshape:2022g.17'

    implementation 'org.apache.commons:commons-text:1.11.0'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
}

nativeImage {
    graalVmHome = System.getProperty('java.home')
    mainClass = 'tf.bug.chalkbot.ChalkBot'
    executableName = 'chalkbot'
    outputDirectory = file("$buildDir/bin")
    arguments {
        add '-J--enable-preview'
        add '--initialize-at-build-time=org.slf4j.simple.SimpleLogger'
    }
}

jar {
    manifest {
        attributes "Main-Class": "tf.bug.chalkbot.ChalkBot"
    }
}

test {
    useJUnitPlatform()
}
